--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.rotate-134 {
+  transform: rotate(134deg);
+}
+
+.posreltop{
+  position: relative;
+  top: -20px;
+}
